# AndroidKeyStore

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/pizzk/keystore/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/certs/: WHAT.der  WHAT.p12  config
app/src/main/java/com/pizzk/keystore/app/: MainActivity.kt  MainApplication.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/pizzk/keystore/app/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  build.gradle
lib/src/androidTest/java/com/pizzk/keystore/: ExampleInstrumentedTest.kt
lib/src/main/: AndroidManifest.xml
lib/src/main/java/com/pizzk/keystore/: KeyStore.kt  KeyStoreAssets.kt
lib/src/main/jni/cpp/: KeyChain.cpp  KeyChain.h  KeyStore.cpp  KeyStore.h  KeyStoreNative.cpp
lib/src/test/java/com/pizzk/keystore/: ExampleUnitTest.kt
